--- a/search_results.html
+++ b/search_results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Let's Go Airlines</title>
+    <title>Search-Let's Go Airlines</title>
     <link rel="stylesheet" href="search.css">
     <link rel="icon" href="favicon-16x16.png" type="image/png" sizes="16x16">
 
@@ -19,6 +19,9 @@
         <p>Departure: Time - Arrival Time</p>
         <p>Seats Available: 100</p>
         <p>Price</p>
+        <div class="input-grp">
+          <button type="button" class="btn btn-primary success">Book Now</button>
+      </div>
       </div>
     </div>
   </div>
