--- a/failed.html
+++ b/failed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Success-Let's Go Airlines</title>
+    <title>Unsuccessful-Let's Go Airlines</title>
     <link rel="icon" href="favicon-16x16.png" type="image/png" sizes="16x16">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
   </head>
